<resources>
    <string name="app_name">Test Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="signOpt">Sign in if already have an account</string>
    <string name="register">REGISTER</string>
    <string name="sign_up_opt">or sign up with</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_google">login with google</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="login_with_twiiter">login with twiiter</string>
    <string name="sign_up_if_you_dont_have_an_account">sign up if you dont have an account</string>
    <string name="title_activity_dash_broad">DashBroadActivity</string>
    <string name="title_home">Create Project</string>
    <string name="title_dashboard">Projects</string>
    <string name="title_notifications">Notifications</string>
    <string name="upload_api_icon">api icon</string>
    <string name="action_settings">action settings</string>
    <string name="title_activity_item">ItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>